[gd_scene load_steps=4 format=3 uid="uid://bfnx6iovb41s4"]

[ext_resource type="Script" path="res://prog_152b.gd" id="1_me3kn"]

[sub_resource type="Theme" id="Theme_6vxjb"]
default_font_size = 29

[sub_resource type="LabelSettings" id="LabelSettings_6wplj"]
font_size = 38

[node name="Prog_152b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_me3kn")

[node name="list" type="ItemList" parent="."]
layout_mode = 0
offset_left = 594.0
offset_top = 4.0
offset_right = 1121.0
offset_bottom = 441.0

[node name="btncalc" type="Button" parent="."]
modulate = Color(0.298039, 1, 0, 1)
layout_mode = 0
offset_left = 166.0
offset_top = 528.0
offset_right = 380.0
offset_bottom = 624.0
theme = SubResource("Theme_6vxjb")
text = "Calculate"

[node name="btnexit" type="Button" parent="."]
modulate = Color(1, 0, 0.0156863, 1)
layout_mode = 0
offset_left = 927.0
offset_top = 538.0
offset_right = 1141.0
offset_bottom = 634.0
theme = SubResource("Theme_6vxjb")
text = "Exit"

[node name="btnclear" type="Button" parent="."]
modulate = Color(0, 0.984314, 1, 1)
layout_mode = 0
offset_left = 453.0
offset_top = 525.0
offset_right = 667.0
offset_bottom = 621.0
theme = SubResource("Theme_6vxjb")
text = "Clear"

[node name="txtvalue" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 235.0
offset_right = 565.0
offset_bottom = 326.0

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 238.0
offset_right = 378.0
offset_bottom = 318.0
text = "Enter test value:"
label_settings = SubResource("LabelSettings_6wplj")
vertical_alignment = 1

[connection signal="pressed" from="btncalc" to="." method="_on_btncalc_pressed"]
[connection signal="pressed" from="btnexit" to="." method="_on_btnexit_pressed"]
[connection signal="pressed" from="btnclear" to="." method="_on_btnclear_pressed"]
